fixed spacing issues

--- a/public/css/base/_base.scss
+++ b/public/css/base/_base.scss
@@ -20,6 +20,7 @@ body {
     box-sizing: border-box;
     background-color: $color-grey-light-1 ;
     height: 100vh;
+    width: 100%;
     overflow: auto;
 
     @include respond(tab-land) {}
