--- a/public/css/pages/_home.scss
+++ b/public/css/pages/_home.scss
@@ -5,6 +5,7 @@
     margin-top: 5rem;
     position: fixed;
     top: 0;
+    left: 0;
 
     @include respond(tab-port) {
         flex-direction: column;
@@ -26,6 +27,7 @@
 }
 
 .img-build {
+    display: none;
     height: 25rem;
     border-radius: 37% 63% 94% 6% / 54% 53% 47% 46%;
     margin: 0 auto;
@@ -40,6 +42,9 @@
 
 .technologies {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin-top: 100vh;
     width: 100%;
     background-image: linear-gradient(to right bottom, $color-grey-light-1 20%, $color-grey-light-2);
